--- a/app/templates/appointments/appointments.jinja
+++ b/app/templates/appointments/appointments.jinja
@@ -61,6 +61,6 @@ Appointments
 {% else %}
 You have no appointments.
 {% endif %}
-<br><a href="/appoint"><button class="blue btn" style="margin-top: 1rem;">New Appointment</button></a>
+<br><a href="/schedule"><button class="blue btn" style="margin-top: 1rem;">New Appointment</button></a>
 {% if rows %}<br><a href="/clear"><button class="red btn">Delete All Appointments</button></a>{% endif %}
 {% endblock %}
