--- a/app/templates/appointments/schedule.jinja
+++ b/app/templates/appointments/schedule.jinja
@@ -8,8 +8,8 @@ Appointments
 
 {% block main %}
 <link rel="stylesheet" href="/static/styles/form.css">
-<h2>Create an Appointment</h2>
-<form action="/appoint" method="post">
+<h2>Schedule an Appointment</h2>
+<form action="/schedule" method="post">
     <div>
         <label for="test">Type:</label><br>
         <select id="test" name="test" required>
