--- a/app/templates/index.jinja
+++ b/app/templates/index.jinja
@@ -84,5 +84,6 @@ Information
             <input type="submit" value="Save" class="mid blue btn">
         </div>
     </form>
-    <a href="/delete"><button class="red btn">Delete all Information</button></a>
+    <a href="/delete"><button class="red btn">Delete all Information</button></a><br><br>
+    <a href="/change_password"><button class="blue btn">Change Password</button></a>
     {% endblock %}
