--- a/app/templates/layout.jinja
+++ b/app/templates/layout.jinja
@@ -11,7 +11,7 @@
     <title>Medical Lab System: {% block title %}{% endblock %}</title>
 </head>
 
-<body>
+<body hx-boost="true">
     <div class="navbar">
         <div class="navbar-logo"><img src="/static/pics/logo/logo.svg" style="height: 1.7rem; translate: -15% 15%;">
             MedLab
