--- a/app/templates/admin/appointments.jinja
+++ b/app/templates/admin/appointments.jinja
@@ -11,7 +11,7 @@ Appointments
 <script src="static/scripts/TableFilter/tablefilter.js"></script>
 
 <h2>Appointments</h2>
-{% if rows %}
+{% if appointments  %}
 <div class="table-container" style="max-width: 760px;">
     <table class="sortable">
         <thead>
@@ -24,17 +24,17 @@ Appointments
             </tr>
         </thead>
         <tbody>
-            {% for row in rows %}
+            {% for appointment in appointments %}
             <tr>
                 <td>
-                    <a href="/user?id={{row.user_id}}&tab=1" style="color: black;">
-                        {% if row.name %}{{row.name}}{% else %}{{row.username}}{%endif%}
+                    <a href="/user?id={{appointment.user_id}}&tab=1" style="color: black;">
+                        {{appointment.user.fullname}}
                     </a>
                 </td>
-                <td>{{ row.time }}</td>
-                <td>{{ row.location }}</td>
-                <td>{{ row.type }}</td>
-                <td><a href="/fill?id={{row.id}}">
+                <td>{{ appointment.time }}</td>
+                <td>{{ appointment.location.name }}</td>
+                <td>{{ appointment.test.name  }}</td>
+                <td><a href="/fill?id={{appointment.id}}">
                         <img src="/static/pics/fill.svg" style="height: 1rem;">
                     </a></td>
             </tr>
