--- a/app/templates/admin/dashboard.jinja
+++ b/app/templates/admin/dashboard.jinja
@@ -11,38 +11,39 @@ Dashboard
 <script src="/static/scripts/chart.min.js"></script>
 <h1>Dashboard</h1>
 <div id="container">
-    <h3 class="counter"><a href="/users" style="color:black;">Users Count: {{ stats[2].value }}</a></h3>
-    <h3 class="counter"><a href="/appointments" style="color:black;">Appointments: {{ stats[0].value }}</a></h3>
-    <h3 class="counter"><a href="/results" style="color:black;">Total Results: {{ stats[1].value }}</a></h3>
+    <h3 class="counter"><a href="/users" style="color:black;">Users Count: {{ stats[2] }}</a></h3>
+    <h3 class="counter"><a href="/appointments" style="color:black;">Appointments: {{ stats[0] }}</a></h3>
+    <h3 class="counter"><a href="/results" style="color:black;">Total Results: {{ stats[1] }}</a></h3>
     <div id="counters">
-        <h3><a href="/users" style="color:black;">Users Count: {{ stats[2].value }}</a></h3>
-        <h3><a href="/appointments" style="color:black;">Appointments: {{ stats[0].value }}</a></h3>
-        <h3><a href="/results" style="color:black;">Total Results: {{ stats[1].value }}</a></h3>
+        <h3><a href="/users" style="color:black;">Users Count: {{ stats[2] }}</a></h3>
+        <h3><a href="/appointments" style="color:black;">Appointments: {{ stats[0] }}</a></h3>
+        <h3><a href="/results" style="color:black;">Total Results: {{ stats[1]}}</a></h3>
     </div>
-    {% if stats[18].value or stats[19].value or stats[20].value or stats[21].value or stats[22].value or stats[23].value %}<canvas id="age"></canvas>{% endif %}
-    {% if stats[3].value or stats[4].value %}<canvas id="gender"></canvas>{% endif %}
-    {% if stats[5].value %}<canvas id="married"></canvas>{% endif %}
-    {% if stats[11].value or stats[12].value %}<canvas id="residence"></canvas>{% endif %}
-    {% if stats[10].value %}<canvas id="exng"></canvas>{% endif %}
-    {% if stats[9].value %}<canvas id="heart_disease"></canvas>{% endif %}
-    {% if stats[6].value or stats[7].value or stats[8].value %}<canvas id="smoke"></canvas>{% endif %}
-    {% if stats[13].value or stats[14].value or stats[15].value or stats[16].value or stats[17].value %}<canvas id="work"></canvas>{% endif %}
+    {% if stats[18] or stats[19] or stats[20] or stats[21] or stats[22] or stats[23] %}<canvas id="age"></canvas>{% endif %}
+    {% if stats[3] or stats[4] %}<canvas id="gender"></canvas>{% endif %}
+    {% if stats[5] %}<canvas id="married"></canvas>{% endif %}
+    {% if stats[11] or stats[12] %}<canvas id="residence"></canvas>{% endif %}
+    {% if stats[10] %}<canvas id="exng"></canvas>{% endif %}
+    {% if stats[9] %}<canvas id="heart_disease"></canvas>{% endif %}
+    {% if stats[6] or stats[7] or stats[8] %}<canvas id="smoke"></canvas>{% endif %}
+    {% if stats[13] or stats[14] or stats[15] or stats[16] or stats[17] %}<canvas id="work"></canvas>{% endif %}
 </div>
 
+
 <script>
-    {% if stats[18].value or stats[19].value or stats[20].value or stats[21].value or stats[22].value or stats[23].value %}
+    {% if stats[18] or stats[19] or stats[20] or stats[21] or stats[22] or stats[23] %}
     var ageChart = new Chart(document.getElementById("age"), {
         type: 'bar',
         data: {
             labels: ["0-15", "16-30", "31-45", "46-60", "61-75", "76+"],
             datasets: [{
                 data: [
-                    {{ stats[18].value }},
-                    {{ stats[19].value }},
-                    {{ stats[20].value }},
-                    {{ stats[21].value }},
-                    {{ stats[22].value }},
-                    {{ stats[23].value }}
+                    {{ stats[18] }},
+                    {{ stats[19] }},
+                    {{ stats[20] }},
+                    {{ stats[21] }},
+                    {{ stats[22] }},
+                    {{ stats[23] }}
                 ],
         backgroundColor: ["#FF6384", "#36A2EB", "#FFCE56", "#4bc0c0", "#ff9f40", "#c9cbcf"],
     }]
@@ -65,13 +66,13 @@ Dashboard
     }
     });
     {% endif %}
-    {% if stats[3].value or stats[4].value %}
+    {% if stats[3] or stats[4] %}
     var genderChart = new Chart(document.getElementById("gender"), {
         type: 'doughnut',
         data: {
             labels: ["Male", "Female"],
             datasets: [{
-                data: [{{ stats[3].value }}, {{ stats[4].value }}],
+                data: [{{ stats[3] }}, {{ stats[4] }}],
                 backgroundColor: ["#36A2EB", "#FF6384"],
             }]
         },
@@ -90,13 +91,13 @@ Dashboard
         }
     });
     {% endif %}
-    {% if stats[11].value or stats[12].value %}
+    {% if stats[11] or stats[12] %}
     var residenceChart = new Chart(document.getElementById("residence"), {
         type: 'doughnut',
         data: {
             labels: ["Rural", "Urban"],
             datasets: [{
-                data: [{{ stats[11].value }}, {{ stats[12].value }}],
+                data: [{{ stats[11] }}, {{ stats[12] }}],
                 backgroundColor: ["#36A2EB", "#FFCE56"],
             }]
         },
@@ -115,13 +116,13 @@ Dashboard
         }
     });
     {% endif %}
-    {% if stats[5].value %}
-    var marriedChart = new Chart(document.getElementById("married"), {
+    {% if stats[5] %}
+    var marriedChart = new Chart(document.getElementById("is_married"), {
             type: 'doughnut',
             data: {
                 labels: ["Married", "Not married"],
                 datasets: [{
-                    data: [{{ stats[5].value }}, {{ stats[2].value - stats[5].value }}],
+                    data: [{{ stats[5] }}, {{ stats[2] - stats[5] }}],
             backgroundColor: ["#36A2EB", "#c9cbcf"],
         }]
         },
@@ -143,13 +144,13 @@ Dashboard
         }
     });
     {% endif %}
-    {% if stats[10].value %}
+    {% if stats[10] %}
     var exngChart = new Chart(document.getElementById("exng"), {
         type: 'doughnut',
         data: {
             labels: ["No", "Yes"],
             datasets: [{
-                data: [{{ stats[2].value - stats[10].value }}, {{ stats[10].value }}],
+                data: [{{ stats[2] - stats[10] }}, {{ stats[10] }}],
                 backgroundColor: ["#c9cbcf", "#FFCE56"],
             }]
         },
@@ -171,13 +172,13 @@ Dashboard
         }
     });
     {% endif %}
-    {% if stats[9].value %}
+    {% if stats[9] %}
     var heartDiseaseChart = new Chart(document.getElementById("heart_disease"), {
         type: 'doughnut',
         data: {
             labels: ["Yes", "No"],
             datasets: [{
-                data: [{{ stats[9].value }}, {{ stats[2].value - stats[9].value }}],
+                data: [{{ stats[9] }}, {{ stats[2] - stats[9] }}],
                 backgroundColor: ["#FF6384", "#c9cbcf"],
             }]
         },
@@ -199,13 +200,13 @@ Dashboard
         }
     });
     {% endif %}
-    {% if stats[6].value or stats[7].value or stats[8].value %}
+    {% if stats[6] or stats[7] or stats[8] %}
     var smokeChart = new Chart(document.getElementById("smoke"), {
         type: 'pie',
         data: {
             labels: ["Current Smokers", "Former Smokers", "Never Smoked"],
             datasets: [{
-                data: [{{ stats[6].value }}, {{ stats[7].value }}, {{ stats[8].value }}],
+                data: [{{ stats[6] }}, {{ stats[7] }}, {{ stats[8] }}],
                 backgroundColor: ["#FF6384", "#36A2EB", "#FFCE56"],
             }]
         },
@@ -230,18 +231,18 @@ Dashboard
     }
     });
     {% endif %}
-    {% if stats[13].value or stats[14].value or stats[15].value or stats[16].value or stats[17].value %}
+    {% if stats[13] or stats[14] or stats[15] or stats[16] or stats[17] %}
     var workChart = new Chart(document.getElementById("work"), {
         type: 'pie',
         data: {
             labels: ["Never Worked", "Private Work", "Self Employed", "Goverment", "Children"],
             datasets: [{
                 data: [
-                    {{ stats[13].value }},
-                    {{ stats[14].value }},
-                    {{ stats[15].value }},
-                    {{ stats[16].value }},
-                    {{ stats[17].value }}
+                    {{ stats[13] }},
+                    {{ stats[14] }},
+                    {{ stats[15] }},
+                    {{ stats[16] }},
+                    {{ stats[17] }}
                 ],
                 backgroundColor: ["#FF6384", "#36A2EB", "#FFCE56", "#4bc0c0", "#c9cbcf"],
             }]
@@ -268,4 +269,6 @@ Dashboard
     });
     {% endif %}
 </script>
+
+
 {% endblock %}
