--- a/app/templates/auth/login.jinja
+++ b/app/templates/auth/login.jinja
@@ -8,10 +8,10 @@ Log In
 <link href="/static/styles/auth.css" rel="stylesheet">
 <form action="/login" method="post">
     <p class="form-title">Sign in to your account</p>
-    <input autocomplete="off" autofocus name="username" placeholder="Enter username" type="text" required>
+    <input autocomplete="off" autofocus name="email" placeholder="Enter Email" type="email" required>
     <input name="password" placeholder="Enter password" type="password" required>
     <button type="submit" class="submit">
-        Sign in
+        Login
     </button>
 
     <p class="signup-link">
