--- a/app/templates/results/result.jinja
+++ b/app/templates/results/result.jinja
@@ -10,14 +10,14 @@ Test Result
 <link rel="stylesheet" href="/static/styles/result.css">
 <h2>Test Result</h2>
 <table>
-    {% for row in rows %}
+    {% for result_field in result_fields %}
     <tr>
-        <td>{{ row.name | snake_case_to_title_case }}:</td>
-        <td>{{ row.value | snake_case_to_title_case | on2positive }}</td>
+        <td>{{ result_field.name | snake_case_to_title_case }}:</td>
+        <td>{{ result_field.value | snake_case_to_title_case | on2positive }}</td>
     </tr>
     {% endfor %}
     {{ classification }}
-    {% if session["user_id"] == 1 %}
+    {% if user.id == 1 %}
     <td>
         <button onclick="window.location.href='/results'" class="mid btn" style="color: black; min-width: 85px;">
             Go Back
